<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/withoutbacklight"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_favorites"
        android:title="@string/nav_favourites"
        android:icon="@drawable/ic_heart"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />


    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

</menu>