<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="12dp"
    android:id="@+id/info_for_anonymous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    android:background="@drawable/info_background">

    <TextView
        style="@style/ExpandedTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/info_for_anonymous" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin_for_app_features"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/info_for_anonymous_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"/>
</LinearLayout>

