<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/bluegrey800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.blogspot.android_czy_java.beautytips.listView.view.OpeningFragment">

            <ImageView
                android:layout_width="@dimen/header_image_width"
                android:layout_height="@dimen/header_image_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/image_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/opening_image" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_title"
                android:textAlignment="center"
                android:textColor="@color/pink200" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_hair"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hair"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/button_face"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/label_face"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/button_body"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/label_body"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_your_recipes"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:text="@string/nav_your_tips"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/button_favourites"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_favourites"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center">

                <TextView
                    android:id="@+id/button_add_new"
                    style="@style/IngredientStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_add_new"
                    android:textColor="@color/pink200"
                    android:background="@drawable/ripple_button_opening"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluegrey700"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/footer_padding"
        android:paddingTop="@dimen/footer_padding">


        <TextView
            style="@style/IngredientStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="@dimen/footer_padding"
            android:text="@string/opening_footer_label"
            android:textAlignment="viewEnd" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="@dimen/footer_padding">

            <ImageView
                android:id="@+id/facebook_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/fb" />

            <ImageView
                android:id="@+id/pinterest_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:src="@drawable/pinterest" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
